--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,18 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+pin-utils = "0.1"
+stackpp = {path = "./stackpp"}
+switcheroo = {path = "./switcheroo"}
+
+[dev-dependencies]
+futures = "0.3"
+criterion = "0.3"
+libc = "0.2"
+
+[[bench]]
+name = "async_benchmark"
+harness = false
 
 [workspace]
 members = [
