--- a/stackpp/Cargo.toml
+++ b/stackpp/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2018"
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
 
+[target.'cfg(target_os = "windows")'.dependencies]
+winapi = { version = "0.3.9", features = ["winbase", "memoryapi", "errhandlingapi", "sysinfoapi"] }
+
 [dev-dependencies]
 criterion = "0.3"
 
