--- a/switcheroo/Cargo.toml
+++ b/switcheroo/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-stackpp = {path = "../stackpp"}
+[target.'cfg(unix)'.dependencies]
+libc = "0.2"
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["winbase", "memoryapi", "errhandlingapi"] }
 
 [dev-dependencies]
 criterion = "0.3"
-libc = "0.2"
-winapi = { version = "0.3", features = ["winbase", "memoryapi", "errhandlingapi", "sysinfoapi"] }
 
 [[bench]]
 name = "switcheroo_benchmark"
