--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 pin-utils = "0.1"
-switcheroo = {path = "./switcheroo"}
+switcheroo = { path = "./switcheroo", version = "0.1.0" }
 
 [dev-dependencies]
 futures = "0.3"
