--- a/switcheroo/Cargo.toml
+++ b/switcheroo/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Bernard Kolobara <me@kolobara.com>"]
 edition = "2018"
 license = "Apache-2.0/MIT"
 description = "Lightweight userland context switches"
-readme = "README.md"
+readme = "Readme.md"
 repository = "https://github.com/bkolobara/async_wormhole/tree/master/switcheroo"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
