Add basic docs for async_womrhole

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "async_wormhole"
+name = "async-wormhole"
 version = "0.1.0"
 authors = ["Bernard Kolobara <me@kolobara.com>"]
 edition = "2018"
+license = "Apache-2.0/MIT"
+description = "Async calls across non-async functions"
+readme = "Readme.md"
+repository = "https://github.com/bkolobara/async_wormhole/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
