--- a/switcheroo/Cargo.toml
+++ b/switcheroo/Cargo.toml
@@ -10,6 +10,9 @@ repository = "https://github.com/bkolobara/async-wormhole/tree/master/switcheroo
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build-dependencies]
+cc = "1.0.28"
+
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
 
